style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    overflow-x: hidden;
}

body {
    min-width: 100vw;
    overflow-x: hidden;
}

.wide-center {
    display: flex;
    flex-direction: column-reverse;
}

.navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
    padding: 1em 0em;
    width: 90vw;
}

.logo {
    width: 5em;
}

.navbar ul {
    display: flex;
    flex-direction: row;
    gap: 1em;
    font-size: 0.8em;
}

.navbar ul a {
    text-decoration: none;
    color: hsl(238, 22%, 44%);
}

.section {
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin: 0 auto;
    padding-top: 4em;
}

.section-title-1 {
    font-size: 1.8em;
    font-weight: bold;
    font-family: 'Open Sans', sans-serif;
    color: hsl(243, 87%, 12%);
    margin: 2em 0em 1em 0em;
}

.section-title-txt {
    font-size: 1.2em;
    color: hsl(238, 22%, 44%);
    margin-bottom: 2em;
}

.inline-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1em;
    margin-bottom: 5em;
}

.input {
    width: 75vw;
}

.input::placeholder {
    font-size: 0.7em;
}

.get-started {
    width: 75vw;
    border-radius: 5px;
}

.curve-bg {
    width: 100vw;
}

.second-section {
    background: hsl(240, 75%, 98%);
    display: flex;
    justify-content: center;
    text-align: center;
    margin: 0 auto;
    padding: 2em 0em 4em 0em;
}

.illustration-img {
    width: 80vw;
}

.section-title-2 {
    font-size: 1.3em;
    font-weight: bold;
    font-family: 'Raleway', sans-serif;
    color: hsl(243, 87%, 12%);
    margin-top: 5em;
}

.section-title-2-txt {
    text-align: left;
    font-size: 1.15em;
}

.see-txt {
    text-decoration: none;
    color: hsl(170, 45%, 43%);
    padding-bottom: 0.3em;
    border-bottom: 1px solid hsl(170, 45%, 43%);
}

.see-txt:hover {
    color: hsl(170, 45%, 43%);
    opacity: 0.7;
}

.testimonial {
    background-color: #fff;
    border-radius: 5px;
    padding: 2em;
    width: 75vw;
    color: hsl(238, 22%, 44%);
    font-size: 0.7em;
    margin: 0 auto;
    text-align: left;
}

.testimonial-author {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.5em;
}

.author-img {
    width: 3em;
    border-radius: 50%;
}

.author-details {
    display: flex;
    flex-direction: column;
    color: hsl(238, 22%, 44%);
}

.author-name {
    font-size: 0.9em;
    font-weight: bold;
    color: hsl(243, 87%, 12%);
}

.author-position {
    font-size: 0.7em;
}

.third-section {
    background: hsl(238, 22%, 44%);
    margin: 0 auto;
    padding: 3em 0em 3em 0em;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
}

.norm-display {
    display: flex;
    flex-direction: column;
}

.section-txt {
    color: hsl(240, 75%, 98%);
}

.get-access {
    font-family: 'Raleway', sans-serif;
    font-weight: bold;
    font-size: 1.3em;
}

.get-access-txt {
    color: hsl(240, 75%, 98%);
    text-align: center;
    font-size: 1.3em;
}

.get-started-free-input {
    margin: 0 auto;
    width: 75vw;
    border-radius: 0.15em;
}

.get-started-free-input::placeholder {
    font-family: 'Raleway', sans-serif;
    font-size: 0.7em;
    opacity: 0.5;
}

.get-started-free-button {
    margin-top: 1em;
    border-radius: 0.15em;
    font-size: 0.8em;
    width: 75vw;
}

footer {
    background: hsl(243, 87%, 12%);
    color: hsl(240, 75%, 98%);
}

.footer-content {
    display: flex;
    flex-direction: column;
    padding: 3em 0em 3em 3em;
}

.footer-info {
    display: flex;
    flex-direction: column;
    gap: 4em;
    margin-top: 2em;
}

.phone-mail {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.phone {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
}

.mail {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1em;
}

.about {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.about a {
    text-decoration: none;
    color: hsl(240, 75%, 98%);
}

.contact {
    display: flex;
    flex-direction: column;
    gap: 1em;
}

.contact a {
    text-decoration: none;
    color: hsl(240, 75%, 98%);
}

.icons {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.icons ul {
    padding: 0;
    overflow-x: visible;
}

footer ul li {
    display: inline;
    list-style-type: none;
    border: 1px solid hsl(240, 75%, 98%);
    border-radius: 50%;
    margin: 0em 0.5em 0em 0.5em;
    padding: 0.5em 0.5em 0.5em 0.6em;
    font-size: 0.7em;
}

footer ul li a {
    color: hsl(240, 75%, 98%);
    text-decoration: none;
    margin: 0;
    padding: 0;
}

.fb {
    padding: 0em 0.1em 0em 0.2em;
}

.tw {
    padding: 0em 0em 0em 0em;
}

.ig {
    padding: 0em 0.2em 0em 0.1em;
}

@media only screen and (min-width: 768px) {
    body {
        font-size: 16px;
        font-family: 'Open Sans', sans-serif;
        overflow-x: hidden;
    }
    .wide-center {
        max-width: 1600px;
        margin: 0 auto;
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
    .header {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
    }
    .navbar {
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        gap: 45em;
        margin-top: 3em;
        max-width: 1600px;
    }
    .logo {
        width: 7em;
    }
    .navbar ul {
        display: flex;
        gap: 3em;
        font-size: 1em;
    }
    .section {
        margin-top: 1em;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        text-align: left;
        gap: 8em;
    }
    .section-title-1 {
        font-size: 2.3em;
        font-weight: bold;
        font-family: 'Raleway', sans-serif;
        color: hsl(243, 87%, 12%);
        margin-bottom: 0.5em;
    }
    .section-title-txt {
        font-size: 1.02em;
        color: hsl(238, 22%, 44%);
        margin-bottom: 1em;
    }
    .big-mb {
        margin-bottom: 10em;
    }
    .inline-form {
        display: flex;
        flex-direction: row;
        gap: 1em;
        height: 2.5em;
    }
    .input {
        width: 17em;
    }
    .input::placeholder {
        font-size: 0.7em;
    }
    .get-started {
        width: 13em;
    }
    .get-started:hover {
        opacity: 0.8;
    }
    .illustration-img {
        width: 33em;
    }
    .curve-bg {
        width: 100vw;
    }
    .second-section {
        background: hsl(240, 75%, 98%);
        margin-top: 0em;
        padding: 0em 0em 6em 0em;
        display: flex;
        flex-direction: row;
        justify-content: center;
        align-items: center;
        text-align: left;
        gap: 8em;
    }
    .section-title-2 {
        font-size: 2em;
        font-weight: bold;
        font-family: 'Raleway', sans-serif;
        color: hsl(243, 87%, 12%);
        margin-top: 1em;
    }
    .section-title-2-txt {
        font-size: 0.85em;
        width: 30em;
    }
    .see-txt {
        text-decoration: none;
        color: hsl(170, 45%, 43%);
        padding-bottom: 0.3em;
        border-bottom: 1px solid hsl(170, 45%, 43%);
    }
    .see-txt:hover {
        color: hsl(170, 45%, 43%);
        opacity: 0.7;
    }
    .testimonial {
        background-color: #fff;
        border-radius: 5px;
        padding: 2em;
        width: 29em;
        color: hsl(238, 22%, 44%);
        margin: 0;
    }
    .testimonial-author {
        display: flex;
        flex-direction: row;
        gap: 0.5em;
    }
    .author-img {
        width: 3em;
        border-radius: 50%;
    }
    .author-details {
        display: flex;
        flex-direction: column;
        color: hsl(238, 22%, 44%);
    }
    .author-name {
        font-size: 0.9em;
        font-weight: bold;
        color: hsl(243, 87%, 12%);
    }
    .author-position {
        font-size: 0.7em;
    }
    .third-section {
        margin: 0;
        background-color: hsl(238, 22%, 44%);
        display: flex;
        flex-direction: row;
        justify-content: center;
        gap: 8em;
        padding: 5em 0;
        text-align: left;
    }
    .section-txt {
        text-align: left;
        width: 25em;
    }
    .get-access {
        font-family: "Raleway", sans-serif;
        font-weight: bold;
        font-size: 1.7em;
        letter-spacing: 0.05em;
        color: hsl(240, 75%, 98%);
    }
    .get-access-txt {
        font-size: 0.9em;
        color: hsl(240, 75%, 98%);
        text-align: left;
        width: 31em;
    }
    .section-form {
        width: 5em;
    }
    .get-started-free-input {
        width: 30em;
        margin-bottom: 1em;
    }
    .get-started-free-button {
        width: 15em;
    }
    .section-form input::placeholder {
        font-size: 0.7em;
    }
    .section-form button {
        padding: 0.5em 1.5em;
        font-size: 0.8em;
    }
    .section-form button:hover {
        opacity: 0.7;
    }
    footer {
        background-color: hsl(243, 87%, 12%);
        color: hsl(240, 75%, 98%);
        padding: 5em 0;
    }
    .footer-content {
        display: flex;
        flex-direction: column;
        margin: auto;
    }
    .footer-info {
        display: flex;
        flex-direction: row;
        gap: 10em;
        margin-top: 2em;
    }
    .phone-mail {
        display: flex;
        flex-direction: column;
        gap: 1em;
    }
    .phone {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 1em;
    }
    .mail {
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 1em;
    }
    .about {
        display: flex;
        flex-direction: column;
        gap: 1em;
    }
    .contact {
        display: flex;
        flex-direction: column;
        gap: 1em;
    }
    footer a {
        color: hsl(240, 75%, 98%);
        text-decoration: none;
    }
    footer a:hover {
        color: hsl(238, 22%, 44%);
    }
    footer ul li {
        display: inline;
        list-style-type: none;
        border: 1px solid hsl(240, 75%, 98%);
        border-radius: 50%;
        overflow: hidden;
        margin: 0em 0.5em 0em 0.5em;
        padding: 0.5em 0.5em 0.5em 0.6em;
        font-size: 0.7em;
    }
    .fb {
        padding: 0em 0.2em 0em 0.3em;
    }
    .tw {
        padding: 0em 0em 0em 0.1em;
    }
    .ig {
        padding: 0em 0.3em 0em 0.2em;
    }
    footer ul li:hover {
        color: hsl(238, 22%, 44%);
        border: 1px solid hsl(238, 22%, 44%);
    }
    footer ul li:hover a {
        color: hsl(238, 22%, 44%);
    }
}

.colors {
    /*Very Dark Blue*/
    color: hsl(243, 87%, 12%);
    /*Desaturated Blue*/
    color: hsl(238, 22%, 44%);
    /*Bright Blue*/
    color: hsl(224, 93%, 58%);
    /*Moderate Cyan*/
    color: hsl(170, 45%, 43%);
    /*Light Grayish Blue*/
    color: hsl(240, 75%, 98%);
    /*Light Gray*/
    color: hsl(0, 0%, 75%);
}

